--- a/cfg/aliases/aliases_controls.cfg
+++ b/cfg/aliases/aliases_controls.cfg
@@ -1,5 +1,8 @@
+echoln "[aliases_controls.cfg] Start of aliases_controls.cfg";
 
-echoln "[aliases_controls.cfg] [3.3.0] Hyper fast Spin";
+
+
+echoln "[aliases_controls.cfg] Registering hyper fast spin aliases";
 alias "+fin_spin" "m_yaw 1000";                                 // Effectively multiplies your sensitivity approximately 45454
 alias "-fin_spin" "m_yaw 0.022";                                // Sets the multiplier back to normal
 // Changing the default m_yaw is controversial, but I can give
@@ -21,18 +24,18 @@ alias "-fin_spin" "m_yaw 0.022";                                // Sets the mult
 // Knowing that we do 16/9 for the decimal value of the ratio,
 // and we do the same thing for your resolution's aspect ratio
 
-echoln "[aliases_controls.cfg] [3.3.1] More info on scoreboard";
+echoln "[aliases_controls.cfg] Registering detailed scoreboard aliases";
 alias "+fin_scorenet" "+showscores; cl_showfps 2; cq_netgraph 1; cl_showmem 3"; // This gives the scoreboard much more
 alias "-fin_scorenet" "-showscores; cl_showfps 0; cq_netgraph 0; cl_showmem 0"; // information, at the cost of vision.
 
 alias "fin_scorenet"    "fin_scoreneton";                       // Toggle alias for the scorenet
 alias "fin_scoreneton"  "togglescores; cl_showfps 2; cq_netgraph 1; cl_showmem 3; alias fin_scorenet fin_scorenetoff";
 alias "fin_scorenetoff" "togglescores; cl_showfps 0; cq_netgraph 0; cl_showmem 0; alias fin_scorenet fin_scoreneton";
-//CS2 cl_hud_healthammo_style 0
-//CS2 cl_hud_healthammo_style 1
+// CS2 cl_hud_healthammo_style 0
+// CS2 cl_hud_healthammo_style 1
 
 
-echoln "[aliases_controls.cfg] [3.3.3] Crouch jump";
+echoln "[aliases_controls.cfg] Registering perfect crouch jump aliases";
 alias "+fin_cjump" "+fin_desubtick_jump; +duck;         alias fin_crouched";       // This is a crouch jump bind, tapping the key performs
 alias "-fin_cjump" "-fin_desubtick_jump; fin_desubtick_jumped; alias fin_crouched -duck"; // a perfect crouch jump, holding it keeps you crouched.
 
@@ -42,22 +45,22 @@ alias "fin_desubtick_jumped"   "-duck";
 alias "fin_crouched" "-duck";
 
 
-echoln "[aliases_controls.cfg] [3.3.6] Bomb finder and E + scrollwheel door spam";     // For the use spam part, credit to: https://www.reddit.com/r/CounterStrikeBinds/comments/5xila4
-alias "+fin_betteruse" "+use; bind mwheeldown fin_usespam;     bind mwheelup fin_usespam;  gameinstructor_enable true";
+echoln "[aliases_controls.cfg] Registering better +use aliases";     // For the use spam part, credit to: https://www.reddit.com/r/CounterStrikeBinds/comments/5xila4
+alias "+fin_betteruse" "+use; bind mwheeldown fin_usespam;     bind mwheelup fin_usespam;         gameinstructor_enable true";
 alias "-fin_betteruse" "-use; bind mwheeldown fin_highveljump; bind mwheelup +fin_desubtick_jump; gameinstructor_enable false";
 alias "fin_usespam"    "-use; bind mwheeldown +use;            bind mwheelup +use";
-//CS2 ; cl_showhelp 1; cl_clearhinthistory
-//CS2 ; cl_showhelp 0; cl_clearhinthistory
+// CS2 ; cl_showhelp 1; cl_clearhinthistory
+// CS2 ; cl_showhelp 0; cl_clearhinthistory
 
 
 
-echoln "[aliases_controls.cfg] [3.3.7] Hold-for-knife alias";
+echoln "[aliases_controls.cfg] Registering Hold-for-knife aliases";
 alias "+fin_knife" "+fin_autoknifeinspect";                     // Hold-for-knife bind, while holding the key you will
 alias "-fin_knife" "lastinv";                                   // hold your knife and go back to your last gun on release
 
 
 
-echoln "[aliases_controls.cfg] [5.3.13] Null canceling movement";
+echoln "[aliases_controls.cfg] Registering null cancelling movement aliases";
 alias "+fin_ncmforward"  "-back;      +forward;   alias fin_ncmcancelforward  +forward";
 alias "+fin_ncmbackward" "-forward;   +back;      alias fin_ncmcancelbackward +back";
 alias "+fin_ncmleft"     "-moveright; +moveleft;  alias fin_ncmcancelleft     +moveleft";
@@ -75,18 +78,18 @@ alias "fin_ncmcancelright"    "";
 
 
 
-echoln "[aliases_controls.cfg] [3.3.20] Jump Throw";
+echoln "[aliases_controls.cfg] Registering jump throw aliases";
 alias "+fin_jthrow" "+fin_desubtick_jump; -attack; -attack2";
 alias "-fin_jthrow" "-fin_desubtick_jump";
 
 
-echoln "[aliases_controls.cfg] [3.3.24] Disable scroll-jumping while spraying";        // Credit to: https://www.reddit.com/r/CounterStrikeBinds/comments/koytzg
+echoln "[aliases_controls.cfg] Registering alias to disable jumping while shooting";  // Credit to: https://www.reddit.com/r/CounterStrikeBinds/comments/koytzg
 alias "+noscroll_attack" "+attack; bind mwheeldown fin_nothing;     bind mwheelup fin_nothing";
 alias "-noscroll_attack" "-attack; bind mwheeldown fin_highveljump; bind mwheelup +fin_desubtick_jump";
 
 
 
-echoln "[aliases_controls.cfg] [3.3.26] Anti-AFK";
+echoln "[aliases_controls.cfg] Registering Anti-AFK aliases";
 alias "fin_antiafk"  "+left; +moveright; +attack2; +sprint";
 alias "fin_antiafk2" "-left; -moveright; -attack2; -sprint";
 
@@ -94,7 +97,7 @@ alias "fin_antiafk2" "-left; -moveright; -attack2; -sprint";
 
 
 
-echoln "[aliases_controls.cfg] [3.3.32] Long jump aliases";
+echoln "[aliases_controls.cfg] Registering long jump aliases";
 alias "fin_forward_pressed" "-back; -forward; alias fin_forward_released";
 alias "+fin_forward" "+forward;               alias fin_forward_released fin_forward_pressed";
 alias "-fin_forward" "fin_forward_released";
@@ -129,7 +132,7 @@ alias "fin_left_released"    "";
 alias "fin_right_released"   "";
 
 
-echoln "[aliases_controls.cfg] [3.3.33] Free acceleration jump";
+echoln "[aliases_controls.cfg] Registering free acceleration jump aliases";
 alias "fin_highveljump" "+fin_desubtick_jump; -back; -fin_desubtick_jump";
 
 
@@ -150,7 +153,7 @@ alias "fin_checkback"  "";
 alias "fin_checkleft"  "";
 alias "fin_checkright" "";
 
-echoln "[aliases_controls.cfg] [3.3.38] De-subticked aliases";
+echoln "[aliases_controls.cfg] Registering desubtick aliases";
 alias "+fin_desubtick_attack"                 "+attack";
 alias "+fin_desubtick_attack2"                "+attack2";
 alias "+fin_desubtick_back"                   "+back";
@@ -230,3 +233,7 @@ alias "-fin_desubtick_radialradio"            "-radialradio";
 alias "-fin_desubtick_radialradio2"           "-radialradio2";
 alias "-fin_desubtick_radialradio3"           "-radialradio3";
 alias "-fin_desubtick_spray_menu"             "-spray_menu";
+
+
+
+echoln "[aliases_controls.cfg] End of aliases_controls.cfg";
