--- a/cfg/aliases/aliases_items.cfg
+++ b/cfg/aliases/aliases_items.cfg
@@ -1,54 +1,57 @@
-echoln "[aliases_items.cfg] [3.3.8] Knives";
-alias "fin_toggleknives"  "fin_knives";                         // Toggle dropping and receiving knives on and off
-alias "fin_knives"        "mp_drop_knife_enable true;  mp_items_prohibited 0; sv_cheats true;  alias fin_toggleknives fin_noknives";    // Turns on dropping and receiving knives
-alias "fin_noknives"      "mp_drop_knife_enable false; mp_items_prohibited 0; sv_cheats false; alias fin_toggleknives fin_knives";      // Turns off dropping and receiving knives
-alias "fin_axe"           "exec ./items/axe.cfg";
-alias "fin_bayonet"       "exec ./items/bayonet.cfg";
-alias "fin_bowie"         "exec ./items/bowie.cfg";
-alias "fin_breachcharge"  "exec ./items/breachcharge.cfg";
-alias "fin_bumpmine"      "exec ./items/bumpmine.cfg";
-alias "fin_butterfly"     "exec ./items/butterfly.cfg";
-alias "fin_c4"            "exec ./items/c4.cfg";
-alias "fin_classic"       "exec ./items/classic.cfg";
-alias "fin_ctknife"       "exec ./items/ctknife.cfg";
-alias "fin_exo"           "exec ./items/exojump.cfg";
-alias "fin_falchion"      "exec ./items/falchion.cfg";
-alias "fin_fists"         "exec ./items/fists.cfg";
-alias "fin_flip"          "exec ./items/flip.cfg";
-alias "fin_gold"          "exec ./items/gold.cfg";
-alias "fin_gut"           "exec ./items/gut.cfg";
-alias "fin_hammer"        "exec ./items/hammer.cfg";
-alias "fin_healthshot"    "exec ./items/healthshot.cfg";
-alias "fin_huntsman"      "exec ./items/huntsman.cfg";
-alias "fin_karambit"      "exec ./items/karambit.cfg";
-alias "fin_m9bayonet"     "exec ./items/m9bayonet.cfg";
-alias "fin_navaja"        "exec ./items/navaja.cfg";
-alias "fin_nomad"         "exec ./items/nomad.cfg";
-alias "fin_paracord"      "exec ./items/paracord.cfg";
-alias "fin_riotshield"    "exec ./items/riotshield.cfg";
-alias "fin_shadowdaggers" "exec ./items/shadowdaggers.cfg";
-alias "fin_skeleton"      "exec ./items/skeleton.cfg";
-alias "fin_spectral"      "exec ./items/spectral.cfg";
-alias "fin_stiletto"      "exec ./items/stiletto.cfg";
-alias "fin_survival"      "exec ./items/survival.cfg";
-alias "fin_tablet"        "exec ./items/tablet.cfg";
-alias "fin_tagrenade"     "exec ./items/tagrenade.cfg";
-alias "fin_talon"         "exec ./items/talon.cfg";
-alias "fin_tknife"        "exec ./items/tknife.cfg";
-alias "fin_ursus"         "exec ./items/ursus.cfg";
-alias "fin_wrench"        "exec ./items/wrench.cfg";
-//alias "fin_zeus"          "exec ./items/zeus.cfg";
+echoln "[aliases_items.cfg] Start of aliases_items.cfg";
+
+
+// CS2 echoln "[aliases_items.cfg] Registering vanilla item spawning aliases";
+// CS2 alias "fin_toggleknives"  "fin_knives";                         // Toggle dropping and receiving knives on and off
+// CS2 alias "fin_knives"        "mp_drop_knife_enable true;  mp_items_prohibited 0; sv_cheats true;  alias fin_toggleknives fin_noknives";    // Turns on dropping and receiving knives
+// CS2 alias "fin_noknives"      "mp_drop_knife_enable false; mp_items_prohibited 0; sv_cheats false; alias fin_toggleknives fin_knives";      // Turns off dropping and receiving knives
+// CS2 alias "fin_axe"           "exec ./items/axe.cfg";
+// CS2 alias "fin_bayonet"       "exec ./items/bayonet.cfg";
+// CS2 alias "fin_bowie"         "exec ./items/bowie.cfg";
+// CS2 alias "fin_breachcharge"  "exec ./items/breachcharge.cfg";
+// CS2 alias "fin_bumpmine"      "exec ./items/bumpmine.cfg";
+// CS2 alias "fin_butterfly"     "exec ./items/butterfly.cfg";
+// CS2 alias "fin_c4"            "exec ./items/c4.cfg";
+// CS2 alias "fin_classic"       "exec ./items/classic.cfg";
+// CS2 alias "fin_ctknife"       "exec ./items/ctknife.cfg";
+// CS2 alias "fin_exo"           "exec ./items/exojump.cfg";
+// CS2 alias "fin_falchion"      "exec ./items/falchion.cfg";
+// CS2 alias "fin_fists"         "exec ./items/fists.cfg";
+// CS2 alias "fin_flip"          "exec ./items/flip.cfg";
+// CS2 alias "fin_gold"          "exec ./items/gold.cfg";
+// CS2 alias "fin_gut"           "exec ./items/gut.cfg";
+// CS2 alias "fin_hammer"        "exec ./items/hammer.cfg";
+// CS2 alias "fin_healthshot"    "exec ./items/healthshot.cfg";
+// CS2 alias "fin_huntsman"      "exec ./items/huntsman.cfg";
+// CS2 alias "fin_karambit"      "exec ./items/karambit.cfg";
+// CS2 alias "fin_m9bayonet"     "exec ./items/m9bayonet.cfg";
+// CS2 alias "fin_navaja"        "exec ./items/navaja.cfg";
+// CS2 alias "fin_nomad"         "exec ./items/nomad.cfg";
+// CS2 alias "fin_paracord"      "exec ./items/paracord.cfg";
+// CS2 alias "fin_riotshield"    "exec ./items/riotshield.cfg";
+// CS2 alias "fin_shadowdaggers" "exec ./items/shadowdaggers.cfg";
+// CS2 alias "fin_skeleton"      "exec ./items/skeleton.cfg";
+// CS2 alias "fin_spectral"      "exec ./items/spectral.cfg";
+// CS2 alias "fin_stiletto"      "exec ./items/stiletto.cfg";
+// CS2 alias "fin_survival"      "exec ./items/survival.cfg";
+// CS2 alias "fin_tablet"        "exec ./items/tablet.cfg";
+// CS2 alias "fin_tagrenade"     "exec ./items/tagrenade.cfg";
+// CS2 alias "fin_talon"         "exec ./items/talon.cfg";
+// CS2 alias "fin_tknife"        "exec ./items/tknife.cfg";
+// CS2 alias "fin_ursus"         "exec ./items/ursus.cfg";
+// CS2 alias "fin_wrench"        "exec ./items/wrench.cfg";
+// CS2 alias "fin_zeus"          "exec ./items/zeus.cfg";
 
 
 
-echoln "[aliases_items.cfg] [3.3.21] Smarter buy binds";
+echoln "[aliases_items.cfg] Registering quick buy aliases";
 alias "fin_rifle"    "buy vest; buy m4a1_silencer; buy defuser; buy vesthelm";
 alias "fin_sniper"   "buy vest; buy awp; buy vesthelm; buy defuser";
 alias "fin_griefing" "buy deagle; buy taser; buy flashbang; buy smokegrenade; buy flashbang; buy vest; buy vesthelm; buy decoy; fin_streamermode_off";
 
 
 
-echoln "[aliases_items.cfg] [3.3.23] Better grenade binds";
+echoln "[aliases_items.cfg] Registering improved grenade aliases";
 alias "fin_molotov"   "fin_nadexhon; buy molotov;      use weapon_molotov; use weapon_incgrenade;";
 alias "fin_smoke"     "fin_nadexhon; buy smokegrenade; use weapon_smokegrenade";
 alias "fin_flashbang" "fin_nadexhon; buy flashbang;    use weapon_flashbang";
@@ -58,7 +61,7 @@ alias "fin_decoy"     "fin_nadexhon; buy decoy;        use weapon_decoy";
 
 
 
-echoln "[aliases_items.cfg] [3.3.31] Knife binds";
+echoln "[aliases_items.cfg] Registering vanilla knife spawning binds";
 alias "+fin_wpn_bayonet" "mp_drop_knife_enable true; give weapon_knife; subclass_change 500 weapon_knife; drop";
 alias "-fin_wpn_bayonet" "fin_uninspect; slot3";
 
@@ -121,3 +124,7 @@ alias "-fin_wpn_skeleton" "fin_uninspect; slot3";
 
 alias "+fin_wpn_kukri" "mp_drop_knife_enable true; give weapon_knife; subclass_change 526 weapon_knife; drop";
 alias "-fin_wpn_kukri" "fin_uninspect; slot3";
+
+
+
+echoln "[aliases_items.cfg] End of aliases_items.cfg";
