--- a/cfg/aliases/aliases_misc.cfg
+++ b/cfg/aliases/aliases_misc.cfg
@@ -1,14 +1,17 @@
+echoln "[aliases_misc.cfg] Start of aliases_misc.cfg";
 
-echoln "[aliases_misc.cfg] [3.3.9] Worshiping Gabe";
+
+
+echoln "[aliases_misc.cfg] Registering Gabe N worshiping alias";
 alias "fin_gaben" "exec ./gaben.cfg";                           // Setup clean Gabe Newell ASCII art printout
 
 
-echoln "[aliases_misc.cfg] [3.3.10] Slow walking volume bump";
-alias "+fin_loudshift" "volume 0.0225; +sprint";                // Increase volume to 15% and slow walk while holding the [+loudshift] key
-alias "-fin_loudshift" "volume 0.01;   -sprint";                // Return volume to 10% and stop slow walking when releasing the [+loudshift] key
+echoln "[aliases_misc.cfg] Registering aliases to increase volume while slow-walking";
+alias "+fin_loudshift" "+fin_desubtick_sprint; volume 0.2025";  // Increase volume to 15% and slow walk while holding the [+loudshift] key
+alias "-fin_loudshift" "-fin_desubtick_sprint; volume 0.1225";  // Return volume to 10% and stop slow walking when releasing the [+loudshift] key
 
 
-echoln "[aliases_misc.cfg] [3.3.11] Chat aliases";                                 // Reminder that chat can display 8 lines on screen while unfocused
+echoln "[aliases_misc.cfg] Registering chat copypasta aliases"; // Reminder that chat can display 8 lines on screen while unfocused
 alias "fin_ahegao" "fin_ahegao0";
 alias "fin_ahegao0" "say ⠀⢻⣷⣿⡄⢈⠿⠇⢸⣿⣿⣿⣿⣿⣿⣟⠛⠲⢯⣿⣒⡾⣼⣷⡹⣿⣿⠄⣼; alias fin_ahegao fin_ahegao1";
 alias "fin_ahegao1" "say ⡄⢸⣿⣿⣷⣬⣽⣯⣾⣿⣿⣿⣿⣿⣿⣿⣿⡀⠄⢀⠉⠙⠛⠛⠳⠽⠿⢠⣿; alias fin_ahegao fin_ahegao2";
@@ -62,62 +65,66 @@ alias "fin_verify"       "say https://help.steampowered.com/faqs/view/0C48-FCBD-
 alias "fin_thermalpaste" "say https://www.youtube.com/watch?v=iBS2SfB4wB0";
 
 
-echoln "[aliases_misc.cfg] [3.3.12] Quick tickrate changing shorthands";
-alias "fin_16tick"  "sv_minupdaterate 16;  sv_maxupdaterate 16;  cl_updaterate 16";
-alias "fin_32tick"  "sv_minupdaterate 32;  sv_maxupdaterate 32;  cl_updaterate 32";
-alias "fin_64tick"  "sv_minupdaterate 64;  sv_maxupdaterate 64;  cl_updaterate 64";
-alias "fin_128tick" "sv_minupdaterate 128; sv_maxupdaterate 128; cl_updaterate 128";
-alias "fin_256tick" "sv_minupdaterate 256; sv_maxupdaterate 256; cl_updaterate 256";
-alias "fin_512tick" "sv_minupdaterate 512; sv_maxupdaterate 512; cl_updaterate 512";
-// Documentation for the tickrate commands:
-// sv_minupdaterate;                                            // Minimum updates per second that the server will allow
-// sv_maxupdaterate;                                            // Maximum updates per second that the server will allow
-// sv_mincmdrate;                                               // This sets the minimum value for cl_cmdrate. 0 == unlimited.
-// cl_updaterate;                                               // Number of packets per second of updates you are requesting from the server
-// cl_cmdrate;                                                  // Max number of command packets sent to server per second
-//CS2 REMOVED FROM ALIASES ABOVE:
-//CS2 sv_mincmdrate 16;  cl_cmdrate 16;
-//CS2 sv_mincmdrate 32;  cl_cmdrate 32;
-//CS2 sv_mincmdrate 64;  cl_cmdrate 64;
-//CS2 sv_mincmdrate 128; cl_cmdrate 128;
-//CS2 sv_mincmdrate 256; cl_cmdrate 256;
-//CS2 sv_mincmdrate 512; cl_cmdrate 512;
+//CS2 echoln "[aliases_misc.cfg] Registering tickrate changing shorthand aliases";
+//CS2 alias "fin_16tick"  "sv_minupdaterate 16;  sv_maxupdaterate 16;  cl_updaterate 16";
+//CS2 alias "fin_32tick"  "sv_minupdaterate 32;  sv_maxupdaterate 32;  cl_updaterate 32";
+//CS2 alias "fin_64tick"  "sv_minupdaterate 64;  sv_maxupdaterate 64;  cl_updaterate 64";
+//CS2 alias "fin_128tick" "sv_minupdaterate 128; sv_maxupdaterate 128; cl_updaterate 128";
+//CS2 alias "fin_256tick" "sv_minupdaterate 256; sv_maxupdaterate 256; cl_updaterate 256";
+//CS2 alias "fin_512tick" "sv_minupdaterate 512; sv_maxupdaterate 512; cl_updaterate 512";
+//CS2 // Documentation for the tickrate commands:
+//CS2 // sv_minupdaterate;                                            // Minimum updates per second that the server will allow
+//CS2 // sv_maxupdaterate;                                            // Maximum updates per second that the server will allow
+//CS2 // sv_mincmdrate;                                               // This sets the minimum value for cl_cmdrate. 0 == unlimited.
+//CS2 // cl_updaterate;                                               // Number of packets per second of updates you are requesting from the server
+//CS2 // cl_cmdrate;                                                  // Max number of command packets sent to server per second
+//CS2  REMOVED FROM ALIASES ABOVE:
+//CS2  sv_mincmdrate 16;  cl_cmdrate 16;
+//CS2  sv_mincmdrate 32;  cl_cmdrate 32;
+//CS2  sv_mincmdrate 64;  cl_cmdrate 64;
+//CS2  sv_mincmdrate 128; cl_cmdrate 128;
+//CS2  sv_mincmdrate 256; cl_cmdrate 256;
+//CS2  sv_mincmdrate 512; cl_cmdrate 512;
 
 
-echoln "[aliases_misc.cfg] [3.3.16] Clan tag cycler";
-alias  "fin_clanid"   "fin_clanid0";                                          // These are ordered from shortest to longest tags (then reversed)
-alias  "fin_clanid0"  "cl_clanid 12455;    alias fin_clanid  fin_clanid1";    // Clan tag: GG
-alias  "fin_clanid1"  "cl_clanid 1673752;  alias fin_clanid  fin_clanid2";    // Clan tag: pro
-alias  "fin_clanid2"  "cl_clanid 485027;   alias fin_clanid  fin_clanid3";    // Clan tag: gay
-alias  "fin_clanid3"  "cl_clanid 17898;    alias fin_clanid  fin_clanid4";    // Clan tag: god
-alias  "fin_clanid4"  "cl_clanid 34038279; alias fin_clanid  fin_clanid5";    // Clan tag: rare
-alias  "fin_clanid5"  "cl_clanid 898;      alias fin_clanid  fin_clanid6";    // Clan tag: Gays
-alias  "fin_clanid6"  "cl_clanid 34038290; alias fin_clanid  fin_clanid7";    // Clan tag: lmao
-alias  "fin_clanid7"  "cl_clanid 34250007; alias fin_clanid  fin_clanid8";    // Clan tag: Lewd
-alias  "fin_clanid8"  "cl_clanid 35310767; alias fin_clanid  fin_clanid9";    // Clan tag: cutie
-alias  "fin_clanid9"  "cl_clanid 261322;   alias fin_clanid fin_clanid10";    // Clan tag: booty
-alias "fin_clanid10"  "cl_clanid 645181;   alias fin_clanid fin_clanid11";    // Clan tag: Waifu
-alias "fin_clanid11"  "cl_clanid 261322;   alias fin_clanid fin_clanid12";    // Clan tag: booty
-alias "fin_clanid12"  "cl_clanid 35310767; alias fin_clanid fin_clanid13";    // Clan tag: cutie
-alias "fin_clanid13"  "cl_clanid 34250007; alias fin_clanid fin_clanid14";    // Clan tag: Lewd
-alias "fin_clanid14"  "cl_clanid 34038290; alias fin_clanid fin_clanid15";    // Clan tag: lmao
-alias "fin_clanid15"  "cl_clanid 898;      alias fin_clanid fin_clanid16";    // Clan tag: Gays
-alias "fin_clanid16"  "cl_clanid 34038279; alias fin_clanid fin_clanid17";    // Clan tag: rare
-alias "fin_clanid17"  "cl_clanid 17898;    alias fin_clanid fin_clanid18";    // Clan tag: god
-alias "fin_clanid18"  "cl_clanid 485027;   alias fin_clanid fin_clanid19";    // Clan tag: gay
-alias "fin_clanid19"  "cl_clanid 1673752;  alias fin_clanid  fin_clanid0";    // Clan tag: pro
-//alias "fin_clanidD" "cl_clanid 2502890;  alias fin_clanid fin_clanid15";    // Clan tag: bitcoin
-//alias "fin_clanidE" "cl_clanid 8376270;  alias fin_clanid fin_clanid15";    // Clan tag: Traps♂
-//alias "fin_clanidF" "cl_clanid 66044;    alias fin_clanid fin_clanid20";    // Clan tag: retarded
-//alias "fin_clanidG" "cl_clanid 36511833; alias fin_clanid fin_clanid21";    // Clan tag: Softlock
-//alias "fin_clanidH" "cl_clanid 38726884; alias fin_clanid fin_clanid22";    // Clan tag: Streamer
-//alias "fin_clanidI" "cl_clanid 34388789; alias fin_clanid fin_clanid23";    // Clan tag: HACKERMAN
-//alias "fin_clanidJ" "cl_clanid 31438149; alias fin_clanid fin_clanid24";    // Clan tag: sadbutcute
-//alias "fin_clanidK" "cl_clanid 40158410; alias fin_clanid fin_clanid25";    // Clan tag: Femboys :3
-//alias "fin_clanidL" "cl_clanid 4145017;  alias fin_clanid fin_clanid0";     // Clan tag: SteamworksDev
-//
-// Doing it in a loop is significantly 'safer' than binding certain tags to certain
-// keys. There have been players with WASD-binded clan tag changers that would get
-// prefired because the enemy team has someone call out that they're tag says they're pushing.
-// Additionally, because with this config I can bind things to every key, there's
-// no way to know if I'm moving, changing guns, throwing utility, or fidgeting.
+//CS2 echoln "[aliases_misc.cfg] Registering Clan tag cycling aliases";
+//CS2 alias  "fin_clanid"   "fin_clanid0";                                          // These are ordered from shortest to longest tags (then reversed)
+//CS2 alias  "fin_clanid0"  "cl_clanid 12455;    alias fin_clanid  fin_clanid1";    // Clan tag: GG
+//CS2 alias  "fin_clanid1"  "cl_clanid 1673752;  alias fin_clanid  fin_clanid2";    // Clan tag: pro
+//CS2 alias  "fin_clanid2"  "cl_clanid 485027;   alias fin_clanid  fin_clanid3";    // Clan tag: gay
+//CS2 alias  "fin_clanid3"  "cl_clanid 17898;    alias fin_clanid  fin_clanid4";    // Clan tag: god
+//CS2 alias  "fin_clanid4"  "cl_clanid 34038279; alias fin_clanid  fin_clanid5";    // Clan tag: rare
+//CS2 alias  "fin_clanid5"  "cl_clanid 898;      alias fin_clanid  fin_clanid6";    // Clan tag: Gays
+//CS2 alias  "fin_clanid6"  "cl_clanid 34038290; alias fin_clanid  fin_clanid7";    // Clan tag: lmao
+//CS2 alias  "fin_clanid7"  "cl_clanid 34250007; alias fin_clanid  fin_clanid8";    // Clan tag: Lewd
+//CS2 alias  "fin_clanid8"  "cl_clanid 35310767; alias fin_clanid  fin_clanid9";    // Clan tag: cutie
+//CS2 alias  "fin_clanid9"  "cl_clanid 261322;   alias fin_clanid fin_clanid10";    // Clan tag: booty
+//CS2 alias "fin_clanid10"  "cl_clanid 645181;   alias fin_clanid fin_clanid11";    // Clan tag: Waifu
+//CS2 alias "fin_clanid11"  "cl_clanid 261322;   alias fin_clanid fin_clanid12";    // Clan tag: booty
+//CS2 alias "fin_clanid12"  "cl_clanid 35310767; alias fin_clanid fin_clanid13";    // Clan tag: cutie
+//CS2 alias "fin_clanid13"  "cl_clanid 34250007; alias fin_clanid fin_clanid14";    // Clan tag: Lewd
+//CS2 alias "fin_clanid14"  "cl_clanid 34038290; alias fin_clanid fin_clanid15";    // Clan tag: lmao
+//CS2 alias "fin_clanid15"  "cl_clanid 898;      alias fin_clanid fin_clanid16";    // Clan tag: Gays
+//CS2 alias "fin_clanid16"  "cl_clanid 34038279; alias fin_clanid fin_clanid17";    // Clan tag: rare
+//CS2 alias "fin_clanid17"  "cl_clanid 17898;    alias fin_clanid fin_clanid18";    // Clan tag: god
+//CS2 alias "fin_clanid18"  "cl_clanid 485027;   alias fin_clanid fin_clanid19";    // Clan tag: gay
+//CS2 alias "fin_clanid19"  "cl_clanid 1673752;  alias fin_clanid  fin_clanid0";    // Clan tag: pro
+//CS2 //alias "fin_clanidD" "cl_clanid 2502890;  alias fin_clanid fin_clanid15";    // Clan tag: bitcoin
+//CS2 //alias "fin_clanidE" "cl_clanid 8376270;  alias fin_clanid fin_clanid15";    // Clan tag: Traps♂
+//CS2 //alias "fin_clanidF" "cl_clanid 66044;    alias fin_clanid fin_clanid20";    // Clan tag: retarded
+//CS2 //alias "fin_clanidG" "cl_clanid 36511833; alias fin_clanid fin_clanid21";    // Clan tag: Softlock
+//CS2 //alias "fin_clanidH" "cl_clanid 38726884; alias fin_clanid fin_clanid22";    // Clan tag: Streamer
+//CS2 //alias "fin_clanidI" "cl_clanid 34388789; alias fin_clanid fin_clanid23";    // Clan tag: HACKERMAN
+//CS2 //alias "fin_clanidJ" "cl_clanid 31438149; alias fin_clanid fin_clanid24";    // Clan tag: sadbutcute
+//CS2 //alias "fin_clanidK" "cl_clanid 40158410; alias fin_clanid fin_clanid25";    // Clan tag: Femboys :3
+//CS2 //alias "fin_clanidL" "cl_clanid 4145017;  alias fin_clanid fin_clanid0";     // Clan tag: SteamworksDev
+//CS2 //
+//CS2 // Doing it in a loop is significantly 'safer' than binding certain tags to certain
+//CS2 // keys. There have been players with WASD-binded clan tag changers that would get
+//CS2 // prefired because the enemy team has someone call out that they're tag says they're pushing.
+//CS2 // Additionally, because with this config I can bind things to every key, there's
+//CS2 // no way to know if I'm moving, changing guns, throwing utility, or fidgeting.
+
+
+
+echoln "[aliases_misc.cfg] End of aliases_misc.cfg";
