--- a/cfg/loader.cfg
+++ b/cfg/loader.cfg
@@ -3,10 +3,10 @@ echoln "[loader.cfg] Start of loader.cfg";
 exec "./cfg/utility/clear.cfg";
 
 echoln "[loader.cfg] Loading";                                               // Echo the command arguments on the console
-echoln "[loader.cfg] Fin's CS2 Config 5.0.0-beta1";
+echoln "[loader.cfg] Fin's CS2 Config 5.0.0-beta2";
 echoln "[loader.cfg] https://steamcommunity.com/id/bigfinfrank";
 echoln "[loader.cfg] https://github.com/bigfinfrank/cfg";
-echoln "[loader.cfg] Last edited: October 14th 2023";
+echoln "[loader.cfg] Last edited: October 15th 2023";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
@@ -33,8 +33,7 @@ echoln "[loader.cfg]  ";
 
 
 echoln "[loader.cfg] [loader.cfg] Loading scripts";
-exec "./cfg/debug.cfg";
-exec "./cfg/init.cfg";
+exec "./cfg/primary/init.cfg";
 exec "./cfg/aliases/aliases_controls.cfg";
 exec "./cfg/aliases/aliases_exploits.cfg";
 exec "./cfg/aliases/aliases_items.cfg";
@@ -54,16 +53,19 @@ exec "./cfg/primary/misc.cfg";
 
 
 
-echoln "[loader.cfg] [11.2] Reset/refresh states";
+echoln "[loader.cfg] Reset/refresh states";
 play "ambient\office\office_projector_slide_01";                // Play a sound confirming the config loaded.
 
 
-echoln "[loader.cfg] [11.1] Saving";
+echoln "[loader.cfg] Saving";
 host_writeconfig;                                               // Saves out the user config values.
-//CS2 mat_savechanges;                                          // Saves your video settings to the game's video.txt
+writekeybindings;                                               // Saves current key bindings to disk.
+// CS2 mat_savechanges;                                          // Saves your video settings to the game's video.txt
 
 
-echoln "[loader.cfg] [12.0] Game info and Gaben";
+echoln "[loader.cfg] Game info and Gaben";
+exec "./cfg/primary/debug.cfg";
+
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
@@ -123,10 +125,10 @@ echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg] Loaded";
-echoln "[loader.cfg] Fin's CS2 Config 5.0.0-beta1";
+echoln "[loader.cfg] Fin's CS2 Config 5.0.0-beta2";
 echoln "[loader.cfg] https://steamcommunity.com/id/bigfinfrank";
 echoln "[loader.cfg] https://github.com/bigfinfrank/cfg";
-echoln "[loader.cfg] Last edited: October 14th 2023";
+echoln "[loader.cfg] Last edited: October 15th 2023";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
