--- a/cfg/primary/audio.cfg
+++ b/cfg/primary/audio.cfg
@@ -1,17 +1,18 @@
 echoln "[audio.cfg] Start of audio.cfg";
 
 
-echoln "[audio.cfg] [10.0] Sliding volume sliders";
-//CS2 -fin_loudshift;                                           // Sets the global volume to our default
-volume "0.1225";                                                // Changes the master volume
-snd_menumusic_volume        "0";                                // Changes the main menu   music volume (Max is 0.60, .06 is 10% of that)
-snd_roundstart_volume       "0";                                // Changes the round start music volume (Max is 0.60)
-snd_roundend_volume         "0";                                // Changes the round end   music volume (Max is 0.60)
-snd_mapobjective_volume     "0.0025";                           // Changes the "bomb..planted" and "taken..hostage" voice over volume (Max is 0.60, .006 is 1% of that)
-snd_deathcamera_volume      "0.0025";                           // Changes the death camera music volume (Max is 0.60, .03 is 5% of that)
+
+echoln "[audio.cfg] Adjusting volume levels";
 snd_tensecondwarning_volume "0.36";                             // Changes the ten second warning music volume (Max is 0.60, .06 is 10% of that)
-//CS2 snd_dzmusic_volume "0.03";                                // Changes the Danger Zone music volume (Max is 0.60, .03 is 5% of that)
+snd_mapobjective_volume "0.0025";                               // Changes the "bomb..planted" and "taken..hostage" voice over volume (Max is 0.60, .006 is 1% of that)
+snd_deathcamera_volume "0.0025";                                // Changes the death camera music volume (Max is 0.60, .03 is 5% of that)
+snd_roundstart_volume "0";                                      // Changes the round start music volume (Max is 0.60)
+snd_menumusic_volume "0";                                       // Changes the main menu   music volume (Max is 0.60, .06 is 10% of that)
+snd_roundend_volume "0";                                        // Changes the round end   music volume (Max is 0.60)
 snd_mvp_volume "0.03";                                          // Changes the music kit end of round MVP volume (Max is 0.60, .03 is 5% of that)
+volume "0.1225";                                                // Changes the master volume
+// CS2 -fin_loudshift;                                           // Sets the global volume to our default
+// CS2 snd_dzmusic_volume "0.03";                                // Changes the Danger Zone music volume (Max is 0.60, .03 is 5% of that)
 //   %5 = 0.0025
 //  %10 = 0.01
 //  %15 = 0.0225
@@ -34,16 +35,20 @@ snd_mvp_volume "0.03";                                          // Changes the m
 // %100 = 1
 
 
-echoln "[audio.cfg] [10.1] Changing misc. sound settings";
+echoln "[audio.cfg] Changing miscellaneous sound settings";
+sv_ignoregrenaderadio "true";                                   // Turn off Fire in the hole messages
+snd_mute_losefocus "false";                                     // Mute sounds when losing focus
 snd_mixahead "0.0032766439253464310";                           // Lower = less audio audio delay, too low = compressed sounding buggy audio (THIS VARIES SYSTEM TO SYSTEM)
 snd_mute_mvp_music_live_players "true";                         // If set, MVP music is muted if players from both teams are still alive.
-//CS2 snd_surround_speakers "0";                                // -1: Auto detect 0/1: Force stereo (with HRTF) 2: Force mono/stereo 4: 4 channel surround 5: 5.1 surround 7: 7.1 surround
-//CS2 snd_prefetch_common "1";                                  // Preloads commonly used sounds
-//CS2 dsp_enhance_stereo "1";                                   // If set to 1, enhanced 3D Stereo sound
-snd_mute_losefocus "false";                                     // Mute sounds when losing focus
-//CS2 snd_pitchquality "1";                                     // 0: Linear sound mixer 1: Interpolated sound mixer
-//CS2 snd_mix_async "1";                                        // 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
+voice_always_sample_mic "true";                                 // For systems experiencing a hang/stall when using voice chat.
+voice_threshold "0";
 bot_chatter "off"                                               // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
-sv_ignoregrenaderadio "true";                                   // Turn off Fire in the hole messages
+// CS2 snd_surround_speakers "0";                                // -1: Auto detect 0/1: Force stereo (with HRTF) 2: Force mono/stereo 4: 4 channel surround 5: 5.1 surround 7: 7.1 surround
+// CS2 snd_prefetch_common "1";                                  // Preloads commonly used sounds
+// CS2 snd_pitchquality "1";                                     // 0: Linear sound mixer 1: Interpolated sound mixer
+// CS2 snd_mix_async "1";                                        // 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
+// CS2 dsp_enhance_stereo "1";                                   // If set to 1, enhanced 3D Stereo sound
+
+
 
 echoln "[audio.cfg] End of audio.cfg";
