--- a/cfg/primary/binds.cfg
+++ b/cfg/primary/binds.cfg
@@ -1,7 +1,8 @@
 echoln "[binds.cfg] Start of binds.cfg";
 
 
-echoln "[binds.cfg] [7.0] Setting up binds for keyboard row 1";
+
+echoln "[binds.cfg] Configuring binds for keyboard row 1";
 bind "escape"         "cancelselect;                                    ; fin_keycontainer";                    // This is the esc key
 bind "F1"             "+fin_desubtick_radialradio2;                     ; fin_keycontainer";                    // This is the F1  key
 bind "F2"             "+fin_desubtick_radialradio3;                     ; fin_keycontainer";                    // This is the F2  key
@@ -20,7 +21,7 @@ bind "SCROLLLOCK"     "sv_cheats 1; toggle cl_drawhud 0 1; toggle r_dof_override
 bind "NUMLOCK"        "                                                 ; fin_keycontainer";                    // This is the pause key (why valve)
 
 
-echoln "[binds.cfg] [7.1] Setting up binds for keyboard row 2";
+echoln "[binds.cfg] Configuring binds for keyboard row 2";
 bind "`"              "toggleconsole"                                                                           // This is the grave key
 bind "1"              "+fin_knife; fin_nadexhoff;                       ; fin_keycontainer";                    // This is the 1 key
 bind "2"              "fin_uninspect; fin_nadexhoff; slot3; slot2; slot1; fin_keycontainer";                    // This is the 2 key
@@ -44,7 +45,7 @@ bind "KP_MULTIPLY"    "exec ./aliases/clear.cfg; exec ./practice.cfg;   ; fin_ke
 bind "KP_MINUS"       "condump; exec ./autoexec.cfg;                    ; fin_keycontainer";                    // This is the Numpad - key
 
 
-echoln "[binds.cfg] [7.2] Setting up binds for keyboard row 3";
+echoln "[binds.cfg] Configuring binds for keyboard row 3";
 bind "TAB"            "+fin_scorenet;                                   ; fin_keycontainer";                    // This is the tab key
 bind "Q"              "                                                 ; fin_keycontainer";                    // This is the q key
 bind "W"              "fin_nadexhon; slot10;                            ; fin_keycontainer";                    // This is the w key
@@ -68,7 +69,7 @@ bind "KP_9"           "incrementvar viewmodel_offset_z -2 2   0.25;     ; fin_ke
 bind "KP_PLUS"        "                                                 ; fin_keycontainer";                    // This is the Numpad + key
 
 
-echoln "[binds.cfg] [7.3] Setting up binds for keyboard row 4";
+echoln "[binds.cfg] Configuring binds for keyboard row 4";
 bind "CAPSLOCK"       "                                                 ; fin_keycontainer";                    // This is the caps lock key
 bind "A"              "                                                 ; fin_keycontainer";                    // This is the a key
 bind "S"              "+fin_left;                                       ; fin_keycontainer";                    // This is the s key
@@ -88,8 +89,8 @@ bind "KP_6"           "viewmodel_offset_z 0;                            ; fin_ke
 // ** Numpad + key is in section [7.2] **
 
 
-echoln "[binds.cfg] [7.4] Setting up binds for keyboard row 5";
-bind "SHIFT"          "+fin_desubtick_sprint;                           ; fin_keycontainer";                    // This is the left shift key
+echoln "[binds.cfg] Configuring binds for keyboard row 5";
+bind "SHIFT"          "+fin_loudshift;                                  ; fin_keycontainer";                    // This is the left shift key
 bind "Z"              "noclip                                           ; fin_keycontainer";                    // This is the z key
 bind "X"              "fin_nadexhon; slot7;                             ; fin_keycontainer";                    // This is the x key
 bind "C"              "fin_handswap;                                    ; fin_keycontainer";                    // This is the c key
@@ -108,7 +109,7 @@ bind "KP_3"           "incrementvar viewmodel_offset_z -2 2   -0.25;    ; fin_ke
 bind "KP_ENTER"       "fin_butt;                                        ; fin_keycontainer";                    // This is the Numpad enter/return key
 
 
-echoln "[binds.cfg] [7.5] Setting up binds for keyboard row 6";
+echoln "[binds.cfg] Configuring binds for keyboard row 6";
 bind "CTRL"           "+fin_desubtick_duck;                             ; fin_keycontainer";                    // This is the left control key
 bind "LWIN"           "                                                 ; fin_keycontainer";                    // This is the windows (os) key to the left of the spacebar
 bind "ALT"            "                                                 ; fin_keycontainer";                    // This is the left alt key
@@ -125,7 +126,7 @@ bind "KP_DEL"         "fin_ahegao;                                      ; fin_ke
 // ** Numpad enter key is in section [7.4] **
 
 
-echoln "[binds.cfg] [7.6] Setting up binds for the mouse";
+echoln "[binds.cfg] Configuring binds for the mouse";
 bind "MOUSE1"         "+fin_desubtick_attack;                           ; fin_keycontainer";                    // This is the left click button
 bind "MOUSE2"         "+fin_desubtick_attack2; fin_uninspect;           ; fin_keycontainer";                    // This is the right click button
 bind "MOUSE3"         "player_ping;                                     ; fin_keycontainer";                    // This is the mouse wheel click button
@@ -137,7 +138,7 @@ bind "MOUSE_X"        "fin_onmousemove; yaw";                                   
 bind "MOUSE_Y"        "fin_onmousemove; pitch";                                                                 // This is activated whenever the mouse is moved up/down
 
 
-echoln "[binds.cfg] [7.7] Setting up binds for controllers";
+echoln "[binds.cfg] Configuring binds for controllers";
 bind "A_BUTTON"       "+fin_cjump;                                      ; fin_keycontainer";                    // This is the A button on Xbox Controllers
 bind "B_BUTTON"       "+fin_betteruse;                                  ; fin_keycontainer";                    // This is the B button on Xbox Controllers
 bind "X_BUTTON"       "+fin_desubtick_reload; fin_uninspect;            ; fin_keycontainer";                    // This is the X button on Xbox Controllers
@@ -156,6 +157,8 @@ bind "UP"	            "mute;                                            ; fin_ke
 bind "DOWN"	          "drop;                                            ; fin_keycontainer";                    // This is down  on the D-Pad on Xbox Controllers
 bind "LEFT"	          "invnext;                                         ; fin_keycontainer";                    // This is left  on the D-Pad on Xbox Controllers
 bind "RIGHT"	        "invprev;                                         ; fin_keycontainer";                    // This is right on the D-Pad on Xbox Controllers
-// Make sure to remove unbindalljoystick from [11.0] if you want to use a controller.
+// Make sure to remove unbindalljoystick from misc.cfg if you want to use a controller.
+
+
 
 echoln "[binds.cfg] End of binds.cfg";
