--- a/cfg/primary/debug.cfg
+++ b/cfg/primary/debug.cfg
@@ -1,15 +1,33 @@
 echoln "[debug.cfg] Start of debug.cfg";
 
-condump;                                                        // dump the text currently in the console to condumpXX.log
 
+
+echoln "[debug.cfg] Printing debug information and saving console log"
 echoln "[debug.cfg]  ";
 demo_info;                                                      // Print version info string.
 echoln "[debug.cfg]  ";
 status;                                                         // Print connection status
 echoln "[debug.cfg]  ";
+status_json;                                                    // Print status in JSON format
+echoln "[debug.cfg]  ";
+net_status;                                                     // Shows current network status
+echoln "[debug.cfg]  ";
+sys_info;                                                       // Print system information to the console
+echoln "[debug.cfg]  ";
+tv_broadcast_status;                                            // Print out broadcast status
+echoln "[debug.cfg]  ";
+tv_status;                                                      // Show SourceTV server status.
+echoln "[debug.cfg]  ";
+demo_info;                                                      // Print information about currently playing demo.
+echoln "[debug.cfg]  ";
+soundinfo;                                                      // Describe the current sound device with an active voice list.
+echoln "[debug.cfg]  ";
+install_dlc_workshoptools_cvar;                                 // DLC Install Status
+echoln "[debug.cfg]  ";
 trusted_launch;                                                 // Trusted launch status
 echoln "[debug.cfg]  ";
-sys_info;
-echoln "[debug.cfg]  ";
+condump;                                                        // dump the text currently in the console to condumpXX.log
+
+
 
 echoln "[debug.cfg] End of debug.cfg";
