--- a/cfg/aliases/aliases_ui.cfg
+++ b/cfg/aliases/aliases_ui.cfg
@@ -1,15 +1,13 @@
+echoln "[aliases_ui.cfg] Start of aliases_ui.cfg";
 
-echoln "[aliases_ui.cfg] [3.3.2] Automatic knife inspect";
+
+
+echoln "[aliases_ui.cfg] Registering automatic knife inspection aliases";
 alias "+fin_autoknifeinspect" "slot3";                          // Pull out weapon when the bound key is pressed
 alias "-fin_autoknifeinspect" "+lookatweapon";                  // Inspect the weapon when the bound key released
 
 
-echoln "[aliases_ui.cfg] [3.3.14] Input clearing shorthand";
-alias "fin_clearinputs" "exec ./clearinputs.cfg";
-
-
-
-echoln "[aliases_ui.cfg] [3.3.15] Bind lists";
+echoln "[aliases_ui.cfg] Registering keybind list aliases";
 alias "fin_60percentrow1" "exec ./keys/60percentrow1.cfg";
 alias "fin_60percentrow2" "exec ./keys/60percentrow2.cfg";
 alias "fin_60percentrow3" "exec ./keys/60percentrow3.cfg";
@@ -23,12 +21,12 @@ alias "fin_joystickbinds" "exec ./keys/joystickbinds.cfg";
 alias "fin_listeverybind" "fin_60percentrow1; fin_60percentrow2; fin_60percentrow3; fin_60percentrow4; fin_60percentrow5; fin_60percentrow6; fin_80percentkeys; fin_numberpadkeys; fin_mousekeybinds; fin_joystickbinds";
 
 
-echoln "[aliases_ui.cfg] [3.3.18] Nade crosshair";
+echoln "[aliases_ui.cfg] Registering grenade crosshair aliases ";
 alias "fin_nadexhon"  "+lookatweapon; multvar cl_crosshairsize -1 100000 1000";    // Usage: multvar varName minValue maxValue factor
 alias "fin_nadexhoff" "cl_crosshairsize 1.5"                    // Enabling the nade crosshair can be done dynamically but swapping between a pistol and primary for example would mess disabling it up
 
 
-echoln "[aliases_ui.cfg] [3.3.25] Rainbow Crosshair";    // Credit to: https://www.reddit.com/r/CounterStrikeBinds/comments/l3f8sq
+echoln "[aliases_ui.cfg] Registering rainbow crosshair aliases";    // Credit to: https://www.reddit.com/r/CounterStrikeBinds/comments/l3f8sq
 // alias "fin_nextxhair" "fin_xh10";    // xh11 is visually the closest to white which is my default color.
 // alias  "fin_xh0" "cl_crosshaircolor_r 255; cl_crosshaircolor_g   0; cl_crosshaircolor_b   0; alias fin_nextxhair  fin_xh1";
 // alias  "fin_xh1" "cl_crosshaircolor_r 255; cl_crosshaircolor_g  26; cl_crosshaircolor_b   0; alias fin_nextxhair  fin_xh2";
@@ -92,7 +90,6 @@ echoln "[aliases_ui.cfg] [3.3.25] Rainbow Crosshair";    // Credit to: https://w
 // alias "fin_xh59" "cl_crosshaircolor_r 255; cl_crosshaircolor_g   0; cl_crosshaircolor_b  26; alias fin_nextxhair fin_xh60";
 // alias "fin_xh60" "cl_crosshaircolor_r 255; cl_crosshaircolor_g   0; cl_crosshaircolor_b   0; alias fin_nextxhair  fin_xh0";
 
-
 alias "fin_nextxhair" "fin_xh0";
 alias  "fin_xh0" "cl_crosshaircolor_r 255; cl_crosshaircolor_g 42; cl_crosshaircolor_b 37; alias fin_nextxhair fin_xh1";
 alias  "fin_xh1" "cl_crosshaircolor_r 255; cl_crosshaircolor_g 114; cl_crosshaircolor_b 37; alias fin_nextxhair fin_xh2";
@@ -105,7 +102,7 @@ alias  "fin_xh7" "cl_crosshaircolor_r 255; cl_crosshaircolor_g 157; cl_crosshair
 alias  "fin_xh8" "cl_crosshaircolor_r 201; cl_crosshaircolor_g 101; cl_crosshaircolor_b 255; alias fin_nextxhair fin_xh0";
 
 
-echoln "[aliases_ui.cfg] [3.3.27] Rainbow HUD";
+echoln "[aliases_ui.cfg] Registering rainbow 'RGB' hud aliases";
 alias "fin_rgbhud" "fin_rgbhud0";                                          // Doesn't use: Side-Based, White (LO), White (HO), White (NO)
 alias "fin_rgbhud0" "cl_hud_color 6;  alias fin_rgbhud fin_rgbhud1";       // Red
 alias "fin_rgbhud1" "cl_hud_color 7;  alias fin_rgbhud fin_rgbhud2";       // Orange
@@ -121,7 +118,7 @@ alias "fin_rgbhud8" "cl_hud_color 5;  alias fin_rgbhud fin_rgbhud0";       // Pu
 //alias "fin_rgbhud" "toggle cl_hud_color 6 7 8 9 10 3 4 11 5";
 
 
-echoln "[aliases_ui.cfg] [3.3.28] Streamer-mode settings";
+echoln "[aliases_ui.cfg] Registering quick streamer mode toggle aliases";
 alias "fin_streamermode"     "fin_streamermode_off";
 alias "fin_streamermode_on"  "cl_sanitize_muted_players 1; cl_sanitize_player_names 1; cl_hide_avatar_images 1; cl_mute_enemy_team 1; alias fin_streamermode fin_streamermode_off";
 alias "fin_streamermode_off" "cl_sanitize_muted_players 0; cl_sanitize_player_names 0; cl_hide_avatar_images 0; cl_mute_enemy_team 0; alias fin_streamermode fin_streamermode_on";
@@ -130,7 +127,11 @@ alias "fin_streamermode_off" "cl_sanitize_muted_players 0; cl_sanitize_player_na
 
 
 
-echoln "[aliases_ui.cfg] [3.3.29] Inspect toggle alias";
+echoln "[aliases_ui.cfg] Registering weapon inspection toggle aliases";
 alias "fin_toggleinspect"     "fin_toggleinspect_on";
 alias "fin_toggleinspect_on"  "; +lookatweapon; alias fin_toggleinspect fin_toggleinspect_off";
 alias "fin_toggleinspect_off" "-lookatweapon;  alias fin_toggleinspect fin_toggleinspect_on";
+
+
+
+echoln "[aliases_ui.cfg] End of aliases_ui.cfg";
