--- a/cfg/primary/ui.cfg
+++ b/cfg/primary/ui.cfg
@@ -1,16 +1,18 @@
 echoln "[ui.cfg] Start of ui.cfg";
 
-echoln "[ui.cfg] [4.0] Changing the radar";
+
+
+echoln "[ui.cfg] Changing the radar";
 cl_radar_square_with_scoreboard "false";                        // If set, the radar will toggle to square when the scoreboard is visible.
-cl_radar_icon_scale_min "0.4";                                  // Sets the minimum icon scale. Valid values are 0.4 to 1.25.
 cl_radar_always_centered "false";                               // If set to 0, the radar is maximally used. Otherwise the player is always centered, even at map extents.
+cl_radar_icon_scale_min "0.4";                                  // Sets the minimum icon scale. Valid values are 0.4 to 1.25.
 cl_teammate_colors_show "2";                                    // In competitive, 1 = show teammates as separate colors in the radar, scoreboard, etc., 2 = show colors and letters
-cl_radar_scale "0.4";                                           // Sets the radar scale. Valid values are 0.25 to 1.0.
 cl_radar_rotate "false";                                        // Enables/disables the scoreboard auto rotating based on where you look
+cl_radar_scale "0.4";                                           // Sets the radar scale. Valid values are 0.25 to 1.0.
 
 
 
-echoln "[ui.cfg] [5.0] Changing the crosshair";
+echoln "[ui.cfg] Changing the crosshair";
 cl_crosshair_sniper_show_normal_inaccuracy "false";             // Include standing inaccuracy when determining sniper crosshair blur
 cl_crosshair_dynamic_splitalpha_outermod "0";                   // If using cl_crosshairstyle 2, this is the alpha modification that will be used for the OUTER crosshair pips once they've split.
 cl_crosshair_dynamic_splitalpha_innermod "0";                   // If using cl_crosshairstyle 2, this is the alpha modification that will be used for the INNER crosshair pips once they've split.
@@ -37,26 +39,29 @@ cl_crosshair_t "false";                                         // T style cross
 
 
 
-echoln "[ui.cfg] [8.0] Adjusting the HUD";
-ui_steam_overlay_notification_position "topright";              // Steam overlay notification position
+echoln "[ui.cfg] Adjusting the HUD";
+cl_teamcounter_playercount_instead_of_avatars "true";
 cl_scoreboard_survivors_always_on "true";                       // Fixes a problem calculating the number of dead players when rounds end
 cl_drawhud_force_teamid_overhead "1";                           // 0: default; 1: draw team ID even if hud disabled; -1: force no team ID
-//CS2 cl_hud_playercount_showcount "1";                         // Shows a numbers instead of profile pictures for alive players
-//CS2 cl_hud_background_alpha "0.1";                            // Makes the hud background semi-transparent
-//CS2 cl_hud_healthammo_style "1";                              // Hides stuff like health bars (only show numbers) and burst mode
-//CS2 cl_hud_bomb_under_radar "1";                              // Show yellow bomb icon under the radar instead of with weapons
-cl_teamid_overhead_mode "2";                                    // Always show team ID over teammates. 1 = pips; 2 = pips, name, and equipment
-//CS2 cl_hud_playercount_pos "1";                               // 0: Put score/round timer/players alive UI at the top of the screen 1: Put it at the bottom
-cl_hud_radar_scale "2";                                         // Sets the radar to its default scale, changing this can be buggy
-hud_scaling "0.5";                                              // Scales hud elements
-hud_showtargetid "true";                                        // Enables display of target names
-//CS2 hud_takesshots "0";                                       // Auto-save a scoreboard screenshot at the end of a map
-cl_showloadout "true";                                          // Toggles display of current loadout.
-cl_hud_color "2";                                               // Sets the hud color to default
-r_show_build_info "false";                                      // Build information. Leave this enabled when submitting bug screenshots and videos, please!
 cl_allow_animated_avatars "false";                              // Whether or not to allow animated avatars
+cl_teamid_overhead_mode "2";                                    // Always show team ID over teammates. 1 = pips; 2 = pips, name, and equipment
+cl_hud_radar_scale "2";                                         // Sets the radar to its default scale, changing this can be buggy
+cl_showloadout "true";                                          // Toggles display of current loadout.
+cl_hud_color "12";                                              // Sets the hud color to show player colors
+hud_scaling "0.9";                                              // Scales hud elements
+hud_showtargetid "true";                                        // Enables display of target names
+r_show_build_info "false";                                      // Build information. Leave this enabled when submitting bug screenshots and videos, please!
+ui_steam_overlay_notification_position_vert "0";                // Steam overlay notification position vertical offset
+ui_steam_overlay_notification_position_horz "80";               // Steam overlay notification position horizontal offset
+ui_steam_overlay_notification_position "topright";              // Steam overlay notification position
+// CS2 cl_hud_playercount_showcount "1";                        // Shows a numbers instead of profile pictures for alive players
+// CS2 cl_hud_background_alpha "0.1";                           // Makes the hud background semi-transparent
+// CS2 cl_hud_healthammo_style "1";                             // Hides stuff like health bars (only show numbers) and burst mode
+// CS2 cl_hud_bomb_under_radar "1";                             // Show yellow bomb icon under the radar instead of with weapons
+// CS2 cl_hud_playercount_pos "1";                              // 0: Put score/round timer/players alive UI at the top of the screen 1: Put it at the bottom
+// CS2 hud_takesshots "0";                                      // Auto-save a scoreboard screenshot at the end of a map
 //
-// cl_hud_color 0   = VARIES (RRR, GGG, BBB)  CT Blue (97c9fa (151, 201, 250)) or T Orange (eabf55 (234, 191, 85)) (based on side)
+// cl_hud_color 0   = VARIES (RRR, GGG, BBB) CT Blue (97c9fa (151, 201, 250)) or T Orange (eabf55 (234, 191, 85)) (based on side)
 // cl_hud_color 1   = e8e8e8 (232, 232, 232) White (low opacity)
 // cl_hud_color 2   = ffffff (255, 255, 255) White (high opacity)
 // cl_hud_color 3   = 97c9ff (151, 201, 255) CT Blue (regardless of side)
@@ -68,9 +73,12 @@ cl_allow_animated_avatars "false";                              // Whether or no
 // cl_hud_color 9   = 3fff25 ( 63, 255,  37) Green
 // cl_hud_color 10  = 71ffdb (113, 255, 219) Aqua
 // cl_hud_color 11  = ff9dcd (255, 157, 205) Salmon
-// cl_hud_color 12+ = ffffff (255, 255, 255) White (no weapon/utility icons, high opacity - ffffff)
+// cl_hud_color 12  = VARIES (RRR, GGG, BBB) Player color, green/purple/yellow/blue/orange
+// cl_hud_color 13+ = ffffff (255, 255, 255) White (no weapon/utility icons, high opacity)
 
-echoln "[ui.cfg] [11.2] Reset/refresh states";
-hud_reloadscheme;                                               // Reloads hud layout and animation scripts.
+// CS2 echoln "[ui.cfg] Reset/refresh states";
+// CS2 hud_reloadscheme;                                               // Reloads hud layout and animation scripts.
+
+
 
 echoln "[ui.cfg] End of ui.cfg";
