--- a/practice.cfg
+++ b/practice.cfg
@@ -1,16 +1,16 @@
 echo;
 echoln "Loading...";
-echoln "Fin's CS2 Practice Config 1.0.1";
+echoln "Fin's CS2 Practice Config 1.0.2";
 echoln "steamcommunity.com/id/bigfinfrank";
-echoln "Last edited: October 13th 2023";
+echoln "Last edited: October 14th 2023";
 echo;
 
 
 
 echoln "[0.0] Hiding server from community browser";
-//CS2 host_players_show "0";
-//CS2 host_rules_show "0";
-//CS2 host_info_show "0";
+// CS2 host_players_show "0";
+// CS2 host_rules_show "0";
+// CS2 host_info_show "0";
 sv_visiblemaxplayers "0";                               // Overrides the max players reported to prospective clients
 sv_tags "hidden";                                       // Server tags. Used to provide extra information to clients when they're browsing for servers. Separate tags with a comma.
 sv_cheats "1";
@@ -19,8 +19,8 @@ sv_cheats "1";
 
 echoln "[1.0] Setting up server contact, branding, and skins API endpoint";
 hostname "Private practice server by /id/bigfinfrank";  // Hostname for server.
-//CS2 pho_inspect_url "http://127.0.0.1:55604";         // URL to inspect page
-//CS2 sv_contact "draco@fin.fail";
+// CS2 pho_inspect_url "http://127.0.0.1:55604";         // URL to inspect page
+// CS2 sv_contact "draco@fin.fail";
 motdfile "motd.txt";                                    // The MOTD file to load.
 
 
@@ -41,7 +41,7 @@ sv_logfile "true";                                      // Log server informatio
 sv_logbans "true";                                      // Log server bans in the server logs.
 sv_logecho "true";                                      // Echo log information to the console.
 sv_lan "false";                                         // Server is a lan server ( no heartbeat, no authentication, no non-class C addresses )
-developer "1";                                          // This turns on a bunch of dev commands and features
+developer "4";                                          // Set developer message level. ( See https://developer.valvesoftware.com/wiki/Developer )
 con_enable "true";                                      // Allows the console to be activated.
 
 
@@ -52,7 +52,7 @@ game_mode "1";                                          // The current game mode
 
 
 echoln "[2.2] Changing settings to use Valve's official competitive settings as a base";
-//CS2 sv_competitive_official_5v5 "1";
+// CS2 sv_competitive_official_5v5 "1";
 sv_competitive_minspec "true";                          // Enable to force certain client convars to minimum/maximum values to help prevent competitive advantages.
 sv_pausable "0";                                        // Is the server pausable.
 
@@ -79,10 +79,10 @@ bot_ignore_players "true";                              // Bots will not see non
 
 
 echoln "[2.4] Changing tickrate and networking settings";
-//CS2 sv_minupdaterate "128";
-//CS2 sv_maxupdaterate "128";
-//CS2 sv_forcepreload "1";
-//CS2 sv_mincmdrate "128";
+// CS2 sv_minupdaterate "128";
+// CS2 sv_maxupdaterate "128";
+// CS2 sv_forcepreload "1";
+// CS2 sv_mincmdrate "128";
 sv_minrate "1000000";                                   // Min bandwidth rate allowed on server, 0 == unlimited
 sv_maxrate "1000000";                                   // Max bandwidth rate allowed on server, 0 == unlimited
 rate "1000000";                                         // Min bytes/sec the host can receive data
@@ -122,10 +122,10 @@ mp_autoteambalance "false";
 mp_spawnprotectiontime "0";                             // Kick players who team-kill within this many seconds of a round restart.
 mp_footsteps_serverside "true";                         // Makes the server always play footstep sounds. Clients never calculate footstep sounds locally, instead relying on the server.
 hostname_in_client_status "false";                      // Show server hostname in client status.
-//CS2 sv_max_allowed_developer "0";
-//CS2 sv_allow_wait_command "0";
-//CS2 sv_reliableavatardata "2";
-//CS2 sv_steamauth_enforce "2";
+// CS2 sv_max_allowed_developer "0";
+// CS2 sv_allow_wait_command "0";
+// CS2 sv_reliableavatardata "2";
+// CS2 sv_steamauth_enforce "2";
 
 
 
@@ -215,8 +215,8 @@ mp_freezetime "0";                                      // how many seconds to k
 
 
 echoln "[6.0] Enabling automatic GOTV Demo recording";
-//CS2 tv_snapshotrate1 "128";
-//CS2 tv_snapshotrate "128";
+// CS2 tv_snapshotrate1 "128";
+// CS2 tv_snapshotrate "128";
 tv_autorecord "true";                                   // Automatically records all games as SourceTV demos.
 tv_nochat "false";                                      // Don't receive chat messages from other SourceTV spectators
 tv_enable "true";                                       // Activates SourceTV on server.
@@ -350,28 +350,39 @@ echoln "[7.6] Adjusting movement settings";
 sv_autobunnyhopping "false";                            // Players automatically re-jump while holding jump button
 mp_solid_teammates "2";                                 // How solid are teammates: 0 = transparent; 1 = fully solid; 2 = can stand on top of heads
 
-
 echoln " ";
 demo_info;                                              // Print version info string.
 echoln " ";
-net_status;                                             // Shows current network status
-echoln " ";
 status;                                                 // Print connection status
 echoln " ";
-trusted_launch;                                         // Trusted launch status
+status_json;                                            // Print status in JSON format
+echoln " ";
+net_status;                                             // Shows current network status
 echoln " ";
 sys_info;                                               // Print system information to the console
 echoln " ";
-
+tv_broadcast_status;                                    // Print out broadcast status
+echoln " ";
+tv_status;                                              // Show SourceTV server status.
+echoln " ";
+demo_info;                                              // Print information about currently playing demo.
+echoln " ";
+soundinfo;                                              // Describe the current sound device with an active voice list.
+echoln " ";
+install_dlc_workshoptools_cvar;                         // DLC Install Status
+echoln " ";
+trusted_launch;                                         // Trusted launch status
+echoln " ";
+condump;                                                // dump the text currently in the console to condumpXX.log
 
 echo;
 echoln "Loaded!";
-echoln "Fin's CS2 Practice Config 1.0.1";
+echoln "Fin's CS2 Practice Config 1.0.2";
 echoln "steamcommunity.com/id/bigfinfrank";
-echoln "Last edited: October 13th 2023";
+echoln "Last edited: October 14th 2023";
 echo;
 
 
-echoln "Restarting to apply changes and disabling cheats in one second...";
+echoln "Restarting to apply changes in one second...";
 mp_restartgame "1";                                     // If non-zero, game will restart in the specified number of seconds
 respawn_player;                                         // Respawns the player from death!
